# ADVENT_code_2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-tests.sh
cpp/day-02/: main.cpp  test.sh
cpp/day-03/: main.cpp  test.sh
cpp/day-04/: main.cpp  test.sh
cpp/day-05/: main.cpp  test.sh
cpp/day-06/: main.cpp  test.sh
cpp/day-09/: input.txt  main.cpp  test.sh
cpp/day-10/: main.cpp  test.sh
cpp/day-11/: main.cpp  test.sh
cpp/day-12/: main.cpp  test.sh
cpp/day-13/: main.cpp  test.sh
cpp/day-14/: main.cpp  test.sh
cpp/day-15/: main.cpp  test.sh
cpp/day-18/: input-test-7.txt  main.cpp  test.sh
cpp/include/first_advent/: README.md
cpp/src/day-02/: 02-test.sh  02.cpp
cpp/src/day-03/: main.cpp  (+1 more)
day1/: day1_puzzle.cpp  day1_puzzle.py
day2/: day2_puzzle  day2_puzzle.cpp
day3/: day3_puzzle  day3_puzzle.cpp
day4/: day4_pullze  day4_pullze.cpp  day4_puzzle_v2.cpp
day5/: day5_puzzle.cpp
day6/: day6_puzzle.cpp
day7/: day7_puzzle.cpp
day8/: day8_puzzle.cpp
day9/: day9_puzzle.cpp
python/: README.md
python/day01/: day01.py
python/day02/: day02.py
python/day03/: day03.py
python/day04/: day04.py  input.txt  test-input.txt
rust/day1/: Cargo.toml
rust/day10/: Cargo.toml
rust/day11/: Cargo.toml
rust/day12/: Cargo.toml
rust/day14/: Cargo.toml
rust/day15/: Cargo.toml
rust/day16/: Cargo.toml
rust/day2/: Cargo.toml
rust/day3/: Cargo.toml
rust/day4/: Cargo.toml
rust/day5/: Cargo.toml
rust/day6/: Cargo.toml
rust/day7/: Cargo.toml
rust/day8/: Cargo.toml
rust/day9/: Cargo.toml
utils/: utils.cpp  utils.h
(+24 files in other folders)
